Fix radio button spacing for judges

--- a/src/app/components/Judge/NoteTaker/NoteCriterion/styles.css
+++ b/src/app/components/Judge/NoteTaker/NoteCriterion/styles.css
@@ -6,3 +6,7 @@
 .text {
   font-size: 1.5em;
 }
+
+.border {
+  background: pink;
+}
